fixed height on mobile layout

--- a/src/components/Backdrop/Backdrop.module.scss
+++ b/src/components/Backdrop/Backdrop.module.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 
   background-color: rgba(0, 0, 0, 0.767);
   backdrop-filter: blur(2px);
